@@ -44,7 +44,6 @@ import com.hederahashgraph.api.proto.java.TransactionRecord;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HexFormat;
@@ -207,9 +206,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
         try {
             final boolean hasCompleteLifecycle = submitOp(spec);
 
-            if (shouldRegisterTxn) {
-                registerTxnSubmitted(spec);
-            }
+            maybeRegisterTxnSubmitted(spec);
 
             if (hasCompleteLifecycle) {
                 assertExpectationsGiven(spec);
@@ -229,11 +226,9 @@ public abstract class HapiSpecOperation implements SpecOperation {
         return Optional.empty();
     }
 
-    private void registerTxnSubmitted(final HapiSpec spec) throws Throwable {
-        if (txnSubmitted != Transaction.getDefaultInstance()) {
-            spec.registry().saveBytes(txnName, txnSubmitted.toByteString());
-            final TransactionID txnId = extractTxnId(txnSubmitted);
-            spec.registry().saveTxnId(txnName, txnId);
+    protected void maybeRegisterTxnSubmitted(final HapiSpec spec) throws Throwable {
+        if (shouldRegisterTxn) {
+            registerTransaction(spec, txnName, txnSubmitted);
         }
     }
 
@@ -389,14 +384,12 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 : spec.keys().sign(spec, builder, keys, overrides);
     }
 
-    public Map<Key, SigControl> setKeyControlOverrides(final HapiSpec spec) {
+    public void setKeyControlOverrides(final HapiSpec spec) {
         if (controlOverrides.isPresent()) {
             overrides = new HashMap<>();
             Stream.of(controlOverrides.get())
                     .forEach(c -> overrides.put(lookupKey(spec, c.getKeyName()), c.getController()));
-            return overrides;
         }
-        return Collections.emptyMap();
     }
 
     public List<Key> signersToUseFor(final HapiSpec spec) {
@@ -404,7 +397,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 .map(f -> f.apply(spec))
                 .filter(k -> k != null && k != Key.getDefaultInstance())
                 .collect(toList());
-        if (!signers.isPresent()) {
+        if (signers.isEmpty()) {
             active.addAll(variableDefaultSigners().apply(spec));
         }
         return active;
@@ -415,7 +408,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
     }
 
     protected List<Function<HapiSpec, Key>> defaultSigners() {
-        return Arrays.asList(spec -> spec.registry().getKey(effectivePayer(spec)));
+        return List.of(spec -> spec.registry().getKey(effectivePayer(spec)));
     }
 
     protected Function<HapiSpec, List<Key>> variableDefaultSigners() {
@@ -457,9 +450,34 @@ public abstract class HapiSpecOperation implements SpecOperation {
         return payer;
     }
 
+    public String getTxnName() {
+        return txnName;
+    }
+
+    public boolean shouldRegisterTxn() {
+        return shouldRegisterTxn;
+    }
+
     protected ByteString rationalize(final String expectedLedgerId) {
         final var hex = expectedLedgerId.substring(2);
         final var bytes = HexFormat.of().parseHex(hex);
         return ByteString.copyFrom(bytes);
+    }
+
+    /**
+     * Registers a transaction in a {@link HapiSpec}'s registry by a given name
+     *
+     * @param spec the spec to register the transaction with
+     * @param txnName the name given to reference the transaction
+     * @param txn the value to store for the given name
+     * @throws Throwable if no transaction ID can be extracted from the given `txn` param
+     */
+    public static void registerTransaction(final HapiSpec spec, final String txnName, final Transaction txn)
+            throws Throwable {
+        if (txn != Transaction.getDefaultInstance()) {
+            spec.registry().saveBytes(txnName, txn.toByteString());
+            final TransactionID txnId = extractTxnId(txn);
+            spec.registry().saveTxnId(txnName, txnId);
+        }
     }
 }
